Se agrega el hader al perfil-del-local.html y el archivo css/header.css. Issue: se genera un scrollbar horizontal.

--- a/css/perfil-del-local.css
+++ b/css/perfil-del-local.css
@@ -80,10 +80,6 @@ body {
   background-color: #fff;
 }
 
-.porcentajes h3 {
-  margin-bottom: 12px;
-}
-
 .porcentajes-input {
   display: grid;
   grid-template-columns: 1fr 1fr;
@@ -102,7 +98,6 @@ body {
   border: 1px solid var(--color-bordes);
   border-radius: 4px;
   width: 90%;
-  box-sizing: border-box;
 }
 
 .metodos-de-pago {
